# webgpu_guide

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: app.hh  webgpu_utils.hh
src/: app.cc  main.cc  webgpu_utils.cc
